--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.22",
     "framer-motion-3d": "^11.0.22",
     "gsap": "^3.12.5",
