--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
