--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "framer-motion": "^11.0.22",
     "framer-motion-3d": "^11.0.22",
     "gsap": "^3.12.5",
+    "http-proxy-middleware": "^3.0.0",
     "jsdom": "^24.0.0",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-tilt": "^1.0.2",
+    "rss-parser": "^3.13.0",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
